Fixed bug where main page whould move when opening select menu. Problem was due to select menu disabeling scrollbar.

--- a/src/components/curtains/Curtains.css
+++ b/src/components/curtains/Curtains.css
@@ -21,14 +21,13 @@
 
 .curtain__panel--right {
   justify-content: flex-start;
-  transform: translateX(calc(100% ));
+  transform: translateX(calc(100% + 1px));
 }
 
 .curtain__content {
   position: absolute;
   width: 75%;
   background-color: white;
-
 }
 
 .slide-in {
